--- a/phongkham-app/package.json
+++ b/phongkham-app/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-cookies": "^0.1.1",
